--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--world", "assets/example/world.yaml", 
+                "--world", "assets/saltwind_station/world.yaml", 
                 "--dev", "True"
             ]
         },
@@ -33,7 +33,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--world", "assets/example/world.yaml", 
+                "--world", "assets/saltwind_station/world.yaml", 
                 "--dev", "True",
                 "--ai-model", "gpt-oss:20b-cloud"
             ]
