--- a/assets/saltwind_station/world.yaml
+++ b/assets/saltwind_station/world.yaml
@@ -48,7 +48,7 @@ items:
     location_description:
       - text: The generator chugs away steadily.
         criteria: { requires_flags: [ power_restored ] }
-      - text: The generator sits silent.
+      - The generator sits silent.
     description: A diesel generator bolted to the concrete floor.
     portable: false
     aliases: [generator]
@@ -70,13 +70,13 @@ items:
     name: Elias the Researcher
     location_description: Elias, a man in a faded field jacket, stands nearby, jotting notes and watching the sea with a wary expression.
     description: A tired man in a faded field jacket, eyes sharp despite the years.
-    aliases: [elias, researcher]
+    aliases: [elias, researcher, man]
 
   caretaker:
     name: Mara the Caretaker
     location_description: Mara, the station's caretaker, lingers near the lighthouse, her attention fixed on the horizon as if expecting the sea to answer back.
     description: A woman with windburned skin and steady hands. She watches the sea constantly.
-    aliases: [mara, caretaker]
+    aliases: [mara, caretaker, woman]
 
   bone:
     name: Rubber bone
@@ -109,7 +109,7 @@ npcs:
       - text: Mara nods as the lights come back on. "Good. Maybe the sea will forgive us yet."
         criteria:
           requires_flags: [ power_restored ]
-      - text: Mara seems preoccupied, and doesn't answer.
+      - Mara seems preoccupied, and doesn't answer.
 
   dog:
     persona: A small enthusiastic dog.
@@ -252,7 +252,7 @@ interactions:
     item: bone
     target: dog
     consumes: true
-    message: "The dog accepts the toy bone and begins chewing on it."
+    message: The dog accepts the toy bone and begins chewing on it.
     effect: { add_companions: [dog] }
   
   use_whistle:
@@ -263,4 +263,4 @@ interactions:
       - text:
           The whistle makes a loud piercing sound, causing the dog to look up.
         criteria: { requires_companions: [dog] }
-      - text: The whistle makes a loud piercing sound. Nothing else happens.
+      - The whistle makes a loud piercing sound. Nothing else happens.
