Move dialog trees into interactions

--- a/assets/example/world.yaml
+++ b/assets/example/world.yaml
@@ -133,52 +133,11 @@ npcs:
       - "Hush now, the woods listen more than you think."
       - "Every lock has a story; some open only to those who listen."
     quest_hook: Knows rumors about the stone gate; will hint if asked or befriended.
-    dialog: The hermit eyes you, then mutters about an old key lost along the forest path.
   gnome:
     persona: Cheeky, unhelpful and somewhat sarcastic; but not threatening.
     sample_lines:
       - "Sure, sure. Everyone has a story."
       - "And why would I want to do that?"
-    dialog: 
-      - criteria: { blocking_flags: [ gate_unlocked ] }
-        npc_narrative: The gnome turns towards you lazily. "Don't look at me, I aint opening this gate for anybody."
-        responses:
-          ok:
-            keyword_hint: shrug and say *OK*
-            player_narrative: >
-              "Fine. I'll do it myself."
-            npc_narrative: The gnome snorts, uninterested.
-          reward:
-            keyword_hint: offer a *reward*
-            aliases:
-              - offer reward
-            player_narrative: >
-              "What about for a reward? I have a lovely pile of purple pocket lint here."
-            criteria:
-              requires_inventory: [ lint ]              
-            npc_narrative: 
-              - text: The gnome scratches his chin. "I aint got no use for lint. But that shiney key there..."
-                criteria:
-                  requires_inventory: [ brass_key ]
-              - text: The gnome turns away, unimpressed.
-          psychology:
-            keyword_hint: try some *psychology*
-            aliases:
-              - psych
-            player_narrative: >
-              "Hey, don't sweat it. Big gate, small gnome - nothing to be ashamed of."
-            npc_narrative: >
-              The gnome looks affronted. "Size isn't everything, you big galoot!".
-              Sliding off the stone, he hobbles over to the gate gives it a calculated kick.
-              To your surprise the gate unlocks with a loud clunk and swings open.
-            effect:
-              set_flags: [ gate_unlocked ]
-      - text: >
-          "Seeing as you don't need that key anymore..."
-        criteria:
-          requires_inventory:
-            - brass_key
-      - "\"Hrmph! Why are you still bothering me?\""
       
   lenny:
     persona: Annoyingly jolly and enthusiastic; eager to share his opinion.
@@ -186,12 +145,6 @@ npcs:
       - This reminds me of a time a wizard turned me into a jellyfish.
       - Ooh I love grumpy trolls. Try poking it with a stick.
       - I'd love to carry that for you, but I don't want to.
-    dialog: 
-      - text: >
-          "Gotta admit, I didn't think you'd solve the gate puzzle."
-        criteria:
-          requires_flags: [ 'gate_unlocked' ]
-      - Lenny says "You're doing well! Much better than the last guy!"            
 
 interactions:
   unlock_stone_gate:
@@ -248,3 +201,73 @@ interactions:
           blocking_flags:
             - gate_unlocked
       - The gnome accepts it grudgingly, but you detect a spark in his eye. "I suppose you won't be needing it anyway.."
+
+  talk_to_hermit:
+    verb: talk
+    item: hermit
+    repeatable: true
+    message: The hermit eyes you, then mutters about an old key lost along the forest path.
+
+  talk_to_gnome:
+    verb: talk
+    item: gnome
+    repeatable: true
+    criteria: { blocking_flags: [ gate_unlocked ] }
+    dialog: 
+      npc_narrative: The gnome turns towards you lazily. "Don't look at me, I aint opening this gate for anybody."
+      responses:
+        ok:
+          keyword_hint: shrug and say *OK*
+          player_narrative: >
+            "Fine. I'll do it myself."
+          npc_narrative: The gnome snorts, uninterested.
+        reward:
+          keyword_hint: offer a *reward*
+          aliases:
+            - offer reward
+          player_narrative: >
+            "What about for a reward? I have a lovely pile of purple pocket lint here."
+          criteria:
+            requires_inventory: [ lint ]              
+          npc_narrative: 
+            - text: The gnome scratches his chin. "I aint got no use for lint. But that shiney key there..."
+              criteria:
+                requires_inventory: [ brass_key ]
+            - text: The gnome turns away, unimpressed.
+        psychology:
+          keyword_hint: try some *psychology*
+          aliases:
+            - psych
+            - try psychology
+            - try psych
+          player_narrative: >
+            "Hey, don't sweat it. Big gate, small gnome - nothing to be ashamed of."
+          npc_narrative: >
+            The gnome looks affronted. "Size isn't everything, you big galoot!".
+            Sliding off the stone, he hobbles over to the gate gives it a calculated kick.
+            To your surprise the gate unlocks with a loud clunk and swings open.
+          effect:
+            set_flags: [ gate_unlocked ]
+
+  talk_to_gnome_gate_unlocked:
+    verb: talk
+    item: gnome
+    repeatable: true
+    criteria: { requires_flags: [ gate_unlocked ] }
+    message:
+      - text: >
+          "Seeing as you don't need that key anymore..."
+        criteria:
+          requires_inventory:
+            - brass_key
+      - "\"Hrmph! Why are you still bothering me?\""
+
+  talk_to_lenny:
+    verb: talk
+    item: lenny
+    repeatable: true
+    message: 
+      - text: >
+          "Gotta admit, I didn't think you'd solve the gate puzzle."
+        criteria: { requires_flags: [ gate_unlocked ] }
+      - Lenny says "You're doing well! Much better than the last guy!"            
