--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--world", "assets/saltwind_station/world.yaml", 
+                "--world", "assets/example/world.yaml", 
                 "--dev", "True"
             ]
         },
@@ -33,19 +33,19 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--world", "assets/saltwind_station/world.yaml", 
+                "--world", "assets/example/world.yaml", 
                 "--dev", "True",
                 "--ai-model", "gpt-oss:20b-cloud"
             ]
         },
         {
-            "name": "gpt-4o-mini (OpenAI)",
+            "name": "gpt-5-mini (OpenAI)",
             "type": "debugpy",
             "request": "launch",
             "module": "slork.cli",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--world", "assets/saltwind_station/world.yaml", "--ai-backend", "openai", "--ai-model", "gpt-4o-mini"]
+            "args": ["--world", "assets/example/world.yaml", "--ai-backend", "openai", "--ai-model", "gpt-5-mini"]
         },
         {
             "name": "Web",
